iLocalize cocos2dx demo finished

--- a/proj.android/app/build.gradle
+++ b/proj.android/app/build.gradle
@@ -100,6 +100,6 @@ dependencies {
     implementation project(':libcocos2dx')
     implementation 'androidx.appcompat:appcompat:1.2.0'
 
-    implementation 'net.aihelp:android-aihelp-aar:2.1.+'
+    implementation 'net.ilocalize:ilocalize-aar:1.4.1'
 
 }
